# NeoComputers

./: .gitignore  NEO_MECHANICS.md  ORCHESTRATION.md  PROJECT.md
neocore-forge/: README.md  build.gradle  components.txt
neocore-forge/run/: options.txt  usercache.json
neocore-forge/run/saves/Новый мир/: level.dat_old
neocore-forge/run/saves/Новый мир/advancements/: 380df991-f603-344c-a090-369bad2a924a.json
neocore-forge/run/saves/Новый мир/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
neocore-forge/run/saves/Новый мир/playerdata/: 380df991-f603-344c-a090-369bad2a924a.dat_old
neocore-forge/run/saves/Новый мир/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
neocore-forge/run/saves/Новый мир/stats/: 380df991-f603-344c-a090-369bad2a924a.json
neocore-forge/src/main/java/com/dimsimd/neocomputers/: NeoComputers.java
neocore-forge/src/main/java/com/vibecoder/neocomputers/: NeoComputers.java
neocore-forge/src/main/resources/: pack.mcmeta
neocore-forge/src/main/resources/assets/neocomputers/blockstates/: computer.json  keyboard.json  keyboard_mouse.json  monitor.json  mouse.json  peripheral_cable.json
neocore-forge/src/main/resources/assets/neocomputers/lang/: en_us.json
neocore-forge/src/main/resources/qemu/: CorePure64-17.0.iso.md5.txt  README.md
neocore-native/: CMakeLists.txt  README.md  vm_bridge.cpp
neocore-native/panama-bridge/include/: vm_bridge.h
panama-bridge/: README.md
panama-bridge/contracts/: README.md
panama-bridge/include/: README.md  vm_bridge.h
panama-bridge/java/: README.md  VmBridge.java
(+67 files in other folders)
